- 增加注释 - 增加修改中文名

--- a/dashboard/templates/user/userlist.html
+++ b/dashboard/templates/user/userlist.html
@@ -45,7 +45,8 @@
 
                         <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
                             <li role="presentation"><a role="menuitem" tabindex="-1" href="/user/modifydepartment/?user={{ user.id }}">部门</a></li>
-                            <li role="presentation"><a role="menuitem" tabindex="-1" href="/user/modifyphone/?user={{ user.id }}">phone</a></li>
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="/user/modifyphone/?user={{ user.id }}">手机号</a></li>
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="/user/modifycnname/?user={{ user.id }}">中文名</a></li>
 
                         </ul>
                     </div>
