--- a/dashboard/templates/user/modify_cnname_tmp.html
+++ b/dashboard/templates/user/modify_cnname_tmp.html
@@ -12,14 +12,7 @@
   <div class="form-group">
     <label for="inputPassword3" class="col-sm-2 control-label">Phone</label>
     <div class="col-sm-5">
-{#        <select class="form-control" name="phone">#}
-{#            <option value="0">请选择部门</option>#}
-{##}
-{#            {% for department in departments %}#}
-{#              <option value="{{ department.id }}" {% if department.id == user_obj.profile.department.id %}selected{% endif %}>{{ department.name }}</option>#}
-{#            {% endfor %}#}
-{#        </select>#}
-        <input type="text" class="form-control" name="new_phone" placeholder="请输入新手机号">
+        <input type="text" class="form-control" name="cn_name" placeholder="请输入新的中文名">
     </div>
   </div>
 
@@ -27,7 +20,6 @@
     <div class="col-sm-offset-2 col-sm-5">
       <!-- 设置一个隐藏表单，向后端传递 user_id -->
       <input type="hidden" name="id" value="{{ user_obj.id }}">
-{#      <input type="hidden" name="phone" value="{{  user_profile.phone }}">#}
       <button type="submit" class="btn btn-primary">提交</button>
     </div>
   </div>
