--- a/dashboard/templates/public/default_navbar.html
+++ b/dashboard/templates/public/default_navbar.html
@@ -7,6 +7,7 @@
                 <ul class="nav nav-second-level  collapse">
                     <li>
                         <a href="/user/list/" class="menu-link" id="menu-userlist">用户列表</a>
+                        <a href="/group/list/" class="menu-link" id="menu-userlist">用户组</a>
                     </li>
                 </ul>
             </li> <!--用户管理 end-->
